--- a/index.html
+++ b/index.html
@@ -4,32 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iPhone Milestones</title>
+    <style>
+        .first {
+            background-color: black;
+            }
+            .second {
+                background-color: blue;
+            }
+            .third {
+                background-color: azure;
+            }
+            .fourth{
+                background-color: burlywood;
+            }
+            .fifth {
+                background-color: blueviolet;
+            }
+            h1 {
+                color:orange;
+            }
+            #table {
+                color:yellow;
+            }
+    </style>
 </head>
-<body style="background-color: black;">
-<h1 style="color:chocolate;">Earliest iPhone Milestones</h1>
-<ul><li><h2 style="color:darkblue; background-color: blue;">iPhone</h2>
+<body class="first">
+<h1>Earliest iPhone Milestones</h1>
+<ul><li><h2 style="color:darkblue;" class="second">iPhone</h2>
     <ul>
-        <li style="background-color: blue"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img  src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.25.55%20AM.png?itok=4QLMY89B">
+        <li class="second"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img  src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.25.55%20AM.png?itok=4QLMY89B">
         </a></li>
 </ul>
 <hr>
 
-<li><h2 style="color:black; background-color: azure;">iPhone 3G</h2>
+<li><h2 style="color:black;" class="third">iPhone 3G</h2>
 <ul>
-    <li style= "background-color: azure;"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.26.21%20AM.png?itok=g5ek4TDZ">
+    <li class="third"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.26.21%20AM.png?itok=g5ek4TDZ">
     </a></li>
 </ul>
 
 <hr>
-<li><h2 style="background-color: burlywood; color:crimson">iPhone 3GS</h2>
+<li><h2 style="color:crimson" class="fourth">iPhone 3GS</h2>
 <ul>
-    <li style="background-color: burlywood;"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.26.46%20AM.png?itok=tc-ivdXB"></a></li>
+    <li class="fourth"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.26.46%20AM.png?itok=tc-ivdXB"></a></li>
 </ul></li>
 
 <hr>
-<li><h2 style="background-color: blueviolet; color: darkcyan;">iPhone 4</h2>
+<li><h2 style="color: darkcyan;" class="fifth">iPhone 4</h2>
     <ul>
-        <li style="background-color: blueviolet;"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img src=https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.11%20AM.png?itok=4qh68XZ5"></a></li>
+        <li class="fifth"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img src=https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.11%20AM.png?itok=4qh68XZ5"></a></li>
     </ul>
 <hr>
 <li><h2 style="background-color: cornflowerblue; color:coral">iPhone 4S</h2>
@@ -40,7 +63,7 @@
 <hr>
 
     <table border="2">
-        <tr style="color:aliceblue">
+        <tr id="table">
             <td>iPhone</td>
             <td>iPhone 3G</td>
             <td>iPhone 3GS</td>
