--- a/index.html
+++ b/index.html
@@ -4,29 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iPhone Milestones</title>
-    <style>
-        .first {
-            background-color: black;
-            }
-            .second {
-                background-color: blue;
-            }
-            .third {
-                background-color: azure;
-            }
-            .fourth{
-                background-color: burlywood;
-            }
-            .fifth {
-                background-color: blueviolet;
-            }
-            h1 {
-                color:orange;
-            }
-            #table {
-                color:yellow;
-            }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="first">
 <h1>Earliest iPhone Milestones</h1>
@@ -57,7 +35,7 @@
 <hr>
 <li><h2 style="background-color: cornflowerblue; color:coral">iPhone 4S</h2>
     <ul>
-        <li style="background-color: cornflowerblue;"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.34%20AM.png?itok=uGFaHBJn">
+        <li class="sixth"><a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.34%20AM.png?itok=uGFaHBJn">
         </a></li>
     </ul>
 <hr>
@@ -70,14 +48,14 @@
             <td>iPhone 4</td>
             <td>iPhone 4S</td>
         </tr>
-        <tr style="color:aliceblue">
-            <td>Blank</td>
-            <td>Blank</td>
-            <td>Blank</td>
-            <td>Blank</td>
-            <td>Blank</td>
+        <tr style="color:aliceblue" >
+            <td><a href="iphone.html">iPhone Page </a></td>
+            <td><a href="iphone3g.html">iPhone 3G Page </a></td>
+            <td><a href="iphone3gs.html">iPhone 3GS Page </a></td>
+            <td><a href="iphone4.html">iPhone 4 Page </a></td>
+            <td><a href="iphone4s.html">iPhone 4S Page </a></td>
         </tr>
-        <tr style="color:aliceblue">
+        <tr style="color:pink">
             <td>June 29, 2007</td>
             <td>July 11, 2008</td> 
             <td>June 19, 2009</td>
