--- a/iphone.html
+++ b/iphone.html
@@ -1,20 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>iPhone</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css" > 
+    </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
+</html>
+<div class="container">
+    <nav class="nav">
+        <ul class="nav nav-tabs">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="iphone.html">iPhone</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone3g.html">iPhone 3G</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone3gs.html">iPhone3GS</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone4.html">iPhone 4</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone4s.html">iPhone 4S</a></li>
+        </ul> 
+    </nav>
+                </div>
     <div class="header">
 <header>iPhone</header>
     </div>
-    <div class="main">
-        <a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img  src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.25.55%20AM.png?itok=4QLMY89B">
+    <div class="container text-center">
+        <div class="row align-items-start">
+          <div class="col-sm-6">
+           <a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img  src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.25.55%20AM.png?itok=4QLMY89B">
         </a>
-    <br>Steve Jobs and his team at Apple released the first iPhone in January 2007. It became a device that is considered revolutionary, for it combined their already existing iPod, a phone, and a communicator for the internet.
-    </div>
+          </div>
+          <div class="col-sm-6">
+            Steve Jobs and his team at Apple released the first iPhone in January 2007. It became a device that is considered revolutionary, for it combined their already existing iPod, a phone, and a communicator for the internet.
+          </div>
+        </div>
     <div class="footer">
         <strong>Source: Gilbert and Jackson, BusinessInsders.com, (<a href="https://www.businessinsider.com/first-phone-anniversary-2016-12">https://www.businessinsider.com/first-phone-anniversary-2016-12</a>)
     </div>
