--- a/iphone4.html
+++ b/iphone4.html
@@ -1,22 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>iPhone 4</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
+</html>
+<div class="container">
+    <nav class="nav">
+        <ul class="nav nav-tabs">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone.html">iPhone</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone3g.html">iPhone 3G</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone3gs.html">iPhone3GS</a></li>
+            <li class="nav-item"><a class="nav-link active" href="iphone4.html">iPhone 4</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone4s.html">iPhone 4S</a></li>
+        </ul> 
+                </nav>
+                </div>
+                <body>
     <div class="header">
         <header>iPhone 4</header>
-            </div>
-            <div class="main">
-                <img src=https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.11%20AM.png?itok=4qh68XZ5">
-            <br>On June 7, 2010, Steve Jobs returns to release the iPhone 4 which followed the recent release of the iPad. The new version of the iPhone had a completely new design, camera, and screen. 
-            </div>
+            </div> 
+            <div class="container text-center">
+                <div class="row align-items-start">
+                  <div class="col-sm-6">
+                    <img src=https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.11%20AM.png?itok=4qh68XZ5">
+                  </div>
+                  <div class="col-sm-6">
+                    On June 7, 2010, Steve Jobs returns to release the iPhone 4 which followed the recent release of the iPad. The new version of the iPhone had a completely new design, camera, and screen. 
+                  </div>
+              </div>
             <div class="footer">
                 <strong>Source: Ritchie, iMore.com, (<a href="https://www.imore.com/history-iphone-4">https://www.imore.com/history-iphone-4</a>)
             </div>
+           
             <table border="2">
                 <tr id="table">
                     <td>iPhone</td>
