--- a/iphone4s.html
+++ b/iphone4s.html
@@ -1,19 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>iPhone 4S</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
+</html>
+<div class="container">
+    <nav class="nav">
+        <ul class="nav nav-tabs">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone.html">iPhone</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone3g.html">iPhone 3G</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone3gs.html">iPhone3GS</a></li>
+            <li class="nav-item"><a class="nav-link" href="iphone4.html">iPhone 4</a></li>
+            <li class="nav-item"><a class="nav-link active" href="iphone4s.html">iPhone 4S</a></li>
+        </ul> 
+    </nav>
+                </div>
 <body>
     <div class="header">
         <header>iPhone 4S</header>
             </div>
-            <div class="main">
-                <img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.34%20AM.png?itok=uGFaHBJn">
-            <br> Compared to the release of the iPhone 4, the iPhone 4S has said to have been underwhelming. There was nothing crazy about the new iPhone, but it is still a great point in getting to where we are today. 
-            </div>
+            <div class="container text-center">
+                <div class="row align-items-start">
+                  <div class="col-sm-6">
+                    <img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.34%20AM.png?itok=uGFaHBJn">
+                  </div>
+                  <div class="col-sm-6">
+                    Compared to the release of the iPhone 4, the iPhone 4S has said to have been underwhelming. There was nothing crazy about the new iPhone, but it is still a great point in getting to where we are today. 
+                  </div>
+              </div>
             <div class="footer">
                 <strong>Source: Miles, PCWorld.com, (<a href="https://www.pcworld.com/article/477101/apple_iphone_4s_a_deep_dive_into_the_new_iphones_hardware.html">https://www.pcworld.com/article/477101/apple_iphone_4s_a_deep_dive_into_the_new_iphones_hardware.html</a>)
             </div>
