--- a/iphone.html
+++ b/iphone.html
@@ -30,14 +30,22 @@
         <div class="row align-items-start">
           <div class="col-sm-6">
            <a href="https://www.iphonelife.com/content/evolution-iphone-every-model-2007-2016"><img  src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.25.55%20AM.png?itok=4QLMY89B">
-        </a>
+          </a>
+        <br>Steve Jobs and his team at Apple released the first iPhone in January 2007. It became a device that is considered revolutionary, for it combined their already existing iPod, a phone, and a communicator for the internet.
           </div>
           <div class="col-sm-6">
-            Steve Jobs and his team at Apple released the first iPhone in January 2007. It became a device that is considered revolutionary, for it combined their already existing iPod, a phone, and a communicator for the internet.
+           
+            The very first iPhone called for multiple failed attempts and designs just as any new development does. The original was based on an earlier device called the P2 which was created by Apple’s Project Experience Purple team. The name was M68, and it contained a 3.5-inch 320x480 LCD screen with 163 pixels per inch. The first iPhone carried “802.11b.g Wi-Fi, a quad-band 2G EDGE data radio, Bluetooth 2.0 EDR, and a paltry 2-megapixel camera” (Mehak). The iPhone contained, beneath its hood, an ARM-based 1176JZ(F)-S processor and PowerVR MBX Lite 3D graphics chip, Samsung manufactured. According to Mehak, “The onboard RAM was just 128MB, and the battery was 1400 mAh battery. At launch, it offered two NAND Flash-based storage tiers – 4GB or 8GB.” iPhone developers incorporated accelerometer-like sensors that rotated the phone’s screen according to device orientation, a sensor to turn off the display when near the user’s face, and a light sensor that adjusted the screen’s brightness. Finally, using the 30-pin connector, the iPhone would be charged and synced to Apple’s iTunes. 
+As for the software, Steve Jobs made multiple adjustments because of things such as the screen looking too crowded. The iPhone contained a full version of Safari and implemented Maps using Google’s location data. Unfortunately, it didn’t have third-party apps, could only carry 16GB of flash memory, and was exclusively available to AT&T. 
+The very first iPhone first shipped in June 2007, and customers lined the outside of Apple stores. Some competitors stated the iPhone as weak while customers spoke highly of it.
+
+
+
           </div>
         </div>
     <div class="footer">
-        <strong>Source: Gilbert and Jackson, BusinessInsders.com, (<a href="https://www.businessinsider.com/first-phone-anniversary-2016-12">https://www.businessinsider.com/first-phone-anniversary-2016-12</a>)
+        <strong>Sources:<br> Gilbert and Jackson, BusinessInsders.com, (<a href="https://www.businessinsider.com/first-phone-anniversary-2016-12">https://www.businessinsider.com/first-phone-anniversary-2016-12</a>)
+          <br>Mehak, iGeeksBlog.com, (<a href="https://www.igeeksblog.com/first-iphone-history/#google_vignette">https://www.igeeksblog.com/first-iphone-history/#google_vignette</a>)
     </div>
     <table border="2">
         <tr id="table">
