--- a/iphone3gs.html
+++ b/iphone3gs.html
@@ -30,15 +30,18 @@
             <div class="container text-center">
                 <div class="row align-items-start">
                   <div class="col-sm-6">
-                    <img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.26.46%20AM.png?itok=tc-ivdXB">
-                  </div>
+                    <img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.26.46%20AM.png?itok=tc-ivdXB"><br>
+                  Without Steve Jobs, who was on medical leave, a team of Apple's executives continued to release the iPhone 3GS on June 8, 2009. Again, this new phone was marketed as being much faster than its predecessors.
+                </div>
                   <div class="col-sm-6">
-                    Without Steve Jobs, who was on medical leave, a team of Apple's executives continued to release the iPhone 3GS on June 8, 2009. Again, this new phone was marketed as being much faster than its predecessors.
-                  </div>
+                    The iPhone 3GS uses a 600MHz which outshines its predecessor that used a 412MHz CPU. Apple’s iPhone 3G utilized twice as much RAM (256MB), a greatly modified GPU for improved graphics performance, and support for quicker mobile data connections through HSDPA (up to 7.2Mbps).
+These improvements made up the entire backbone of the iPhones 3GS and served as great marketing tools for Apple. The addition of the HSDPA allowed for quicker usage, graphics ran more smoothly, and the phone’s apps looked much better due to the new GPU. The overall quality and performance of the iPhone 3GS improved due to its processor and RAM.
+The storage options of the iPhone 3GS have been upped by Apple adding support for 16GB and 32GB, outdoing the 8GB and 16Gb on the iPhone 3G. Above all this, it also included designs and tweaks purposed to improve the usability of the iPhone. Features including copy, cut, paste, and a compass all were intended to better the user’s experience. At last, the camera of the iPhone 3GS. The third iPhone featured a 3MP rear-mounted camera and could record videos in VGA at 30 frames per second. Like the iPhone 3G, the iPhone 3GS also didn’t have a front-facing camera. This would not become a feature until the release of the iPhone 4. In 2009/2010. The specs were past the average features of a phone at that time. Apple charged $199 and $299 for the iPhone 3GS when they first were released to the world, but the creators’ prices have completely upped to a modern pricing of $699 minimum.
+The iPhones 3G and 3GS were discontinued in September 2012. You can still buy an iPhone 3GS online although it’d be problematic. 
                   </div>
             <div class="footer">
-                <strong>Source: Ritchie, iMore.com, (<a href="https://www.imore.com/history-iphone-3gs">https://www.imore.com/history-iphone-3gs</a>)
-            </div>
+                <strong>Sources:<br>Ritchie, iMore.com, (<a href="https://www.imore.com/history-iphone-3gs">https://www.imore.com/history-iphone-3gs</a>)
+              <br> Goodwin, KnowYourMobile.com, (<a href="https://www.knowyourmobile.com/phones/iphone-3g-vs-iphone-3gs/">https://www.knowyourmobile.com/phones/iphone-3g-vs-iphone-3gs/</a>)</div>
             <table border="2">
                 <tr id="table">
                     <td>iPhone</td>
