--- a/iphone4.html
+++ b/iphone4.html
@@ -30,14 +30,19 @@
             <div class="container text-center">
                 <div class="row align-items-start">
                   <div class="col-sm-6">
-                    <img src=https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.11%20AM.png?itok=4qh68XZ5">
-                  </div>
+                    <img src=https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.11%20AM.png?itok=4qh68XZ5"><br>
+                  On June 7, 2010, Steve Jobs returns to release the iPhone 4 which followed the recent release of the iPad. The new version of the iPhone had a completely new design, camera, and screen. 
+                </div>
                   <div class="col-sm-6">
-                    On June 7, 2010, Steve Jobs returns to release the iPhone 4 which followed the recent release of the iPad. The new version of the iPhone had a completely new design, camera, and screen. 
+                    For the iPhone 4, Apple made significant installments. Some of these installments were  optical lamination and an ISP panel with LED backlight. It allowed for brighter photo-taking, and it improved viewing angles. Instead of attempting to match the display sizes shown by competitors, the iPhone 4 outshined all of them. Apple horizontally and vertically increased the resolution and kept the physical size constant at a measurement of 3.5-inches to boost its pixel count without disrupting the compatibility of the already existing apps. This method took the resolution from 480x320 to 960x640, and increased its density of 163 ppi to a density of 326 ppi. Apple stated that “at normal viewing distance the pixels disappeared.” Apple called it a Retina display. 
+The iPhone 4 was flat with a chemically hardened glass, or aluminosilicate, front and back, and a stainless-steel band running around its sides. The new edition was 24% thinner than its predecessor. The phone came in black and white; however, the white version was not released until much later. 
+Apple made the switch from mini to microSIM cellular radio to save space on the carrier card. Bluetooth stayed the same. The Wi-Fi radio went to 802.11 g/b/n, though only on the 2.4Mhz band. The stainless-steel band around the phone was the antenna.
+Storage options remained while RAM was increased to 512 MB. It was almost not enough to support the additional pixels of the Retina device. The battery jumped to 1420mAh, increasing useful battery life. 
+For better noise quality and noise cancellation, Apple incorporated dual mics. Also, for the first time, the iPhone 4 had a front facing camera, allowing Apple to introduce FaceTime. 
                   </div>
               </div>
             <div class="footer">
-                <strong>Source: Ritchie, iMore.com, (<a href="https://www.imore.com/history-iphone-4">https://www.imore.com/history-iphone-4</a>)
+                <strong>Source of all above information:<br> Ritchie, iMore.com, (<a href="https://www.imore.com/history-iphone-4">https://www.imore.com/history-iphone-4</a>)
             </div>
            
             <table border="2">
