--- a/iphone4s.html
+++ b/iphone4s.html
@@ -30,14 +30,23 @@
             <div class="container text-center">
                 <div class="row align-items-start">
                   <div class="col-sm-6">
-                    <img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.34%20AM.png?itok=uGFaHBJn">
-                  </div>
+                    <img src="https://www.iphonelife.com/sites/iphonelife.com/files/styles/full_width_wide_1x/public/styles/top_image/public/Screen%20Shot%202016-06-23%20at%2010.27.34%20AM.png?itok=uGFaHBJn"><br>
+                  Compared to the release of the iPhone 4, the iPhone 4S has said to have been underwhelming. There was nothing crazy about the new iPhone, but it is still a great point in getting to where we are today. 
+                </div>
                   <div class="col-sm-6">
-                    Compared to the release of the iPhone 4, the iPhone 4S has said to have been underwhelming. There was nothing crazy about the new iPhone, but it is still a great point in getting to where we are today. 
+                    The fifth released iPhone, or the iPhone 4S, displayed the very same basic design as the previous year’s model display, just as the iPhone 3GS did.  It contained the same 960x840 326ppi Retina display and IPS Led panel that the iPhone 4 also did. The iPhone 4S was also constructed very similarly. 
+The Wi-Fi remained at 802.11 b/g/n on 2.4Mhz. The new model’s processor got a significant improvement also – a version of Apple’s A5 system-on-a-chip that made its debut with the iPad 2 previously. The iPhone 4S’ A5 had a dual-core Cortex A9 central processing unit with Imagination’s dual-core PowerVR SGX 543MP2 graphics processing unit. Apple claimed their phone had a 2x general speed and 7x graphics improvement.
+This enabled aspects like AirPlay mirroring and Siri, which was positioned as beta during the launch of the iPhone 4S. Siri caused multiple issues for Apple and its customers, requiring a year to solve them. In order to enable Siri’s raise to speak feature, the team at Apple incorporated an infrared sensor, but besides this, other sensors remained the same. Creators chose to stick with the same 512MB of RAM as previously use, but they also introduced a new 64GB storage option for the iPhone 4S. The battery was also sightly improved, up to 1430mAh. It allowed for 8 hours of usable battery life for 3G talk. 
+The front camera used for FaceTime remained the same, VGA sensor. The rear iSight camera received lots of attention. It was brought up to 8 megapixels and 1080p. Apple also added another piece of glass to the body to increase sharpness and an infrared filter to improve the quality of colors. The Apple A5 processor provided facial recognition in photos. 
+Pricing stayed the same, starting at $199 and $299 on-contract, with the new model adding on at $399. 
+
+
                   </div>
               </div>
             <div class="footer">
-                <strong>Source: Miles, PCWorld.com, (<a href="https://www.pcworld.com/article/477101/apple_iphone_4s_a_deep_dive_into_the_new_iphones_hardware.html">https://www.pcworld.com/article/477101/apple_iphone_4s_a_deep_dive_into_the_new_iphones_hardware.html</a>)
+                <strong>Sources:<br>Miles, PCWorld.com, (<a href="https://www.pcworld.com/article/477101/apple_iphone_4s_a_deep_dive_into_the_new_iphones_hardware.html">https://www.pcworld.com/article/477101/apple_iphone_4s_a_deep_dive_into_the_new_iphones_hardware.html</a>)<br>
+                  Ritchie, iMore.com, (<a href="https://www.imore.com/history-iphone-4">https://www.imore.com/history-iphone-4</a>)
+
             </div>
             <table border="2">
                 <tr id="table">
